# forgottenserver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.lua.dist  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: build-ubuntu.yml
cmake/: FindMySQL.cmake  gitmetadata.h.in
data/routes/: routes.lua
data/routes/scripts/: login_webservice.lua
debian/: changelog  control  copyright  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules
src/: configmanager.cpp  configmanager.h  database.cpp  database.h  luascript.cpp  otserv.cpp
src/http_api/: router.h
vc17/: theforgottenserver.vcxproj
